# swoop

./: .gitignore  AGGRESSIVE_CRAWLER_DEMO_PLAN.md  ARCHITECTURE.md  CLEANUP_AND_PRIORITIZATION_ANALYSIS.md  Cargo.toml  DEPLOYMENT_TUTORIAL.md  DEV_TASKS_PHASE2.md  EXECUTION_PLAN.md  LICENSE  Makefile  PERFORMANCE_DEMO_RESULTS.md  PHASE_3_SUMMARY.md  PROGRESS_PLAN.md  README.md  SPEC.md  STATUS.md  TAURI_FRONTEND_PROMPTS.md  USER_GUIDE.md  V0_PROMPTS.md  blueprint.md  build_clean.sh  clippy.toml  comprehensive_test.sh  config.template  docker-compose.yml  new-readme.md  performance_comparison.sh  quick_test.txt  run_comprehensive_demo.sh  run_monitoring_demo.sh  run_server.sh  run_tui.sh  rustfmt.toml  setup_frontend.sh  small_test.txt  start_server.sh  test_server.sh  test_tui.sh  test_urls.txt  todo.md  (+1 more)
.cursor/rules/: rust-scraper-project.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: crawl_benchmarks.rs
core/: Cargo.toml
core/src/: client.rs  lib.rs  security.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_TUTORIAL.md  DEVELOPER_GUIDE.md  FAQ.md  GLOSSARY.md  INTEGRATION_EXAMPLES.md  LICENSE.md  PERFORMANCE_TUNING.md  PROJECT_OVERVIEW.md  QUICK_START.md  SECURITY.md  TTS_INTEGRATION.md  openapi.yaml
docs-site/: .source.config.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json
docs-site/src/app/: globals.css  layout.tsx  page.tsx
docs-site/src/app/docs/: layout.tsx
docs-site/src/app/docs/[[...slug]]/: page.tsx
docs-site/src/app/docs/api/: page.tsx
docs-site/src/content/docs/: index.mdx  meta.json
docs-site/src/content/docs/get-started/: meta.json  quick-start.mdx
docs-site/src/content/docs/operations/: meta.json  security.mdx
docs-site/src/lib/: source.ts
docs/guide/: getting-started.md
docs/security/: vulnerability-assessment.md
examples/: monitoring_demo.rs  server_example.rs  simple_server.rs
frontend/: .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatStream.tsx  CrawlStream.tsx  DocumentStream.tsx  StreamingProgress.tsx  crawler-configuration.tsx  theme-provider.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/marketing/: CTA.tsx  FeatureCards.tsx  GridPattern.tsx  Hero.tsx
frontend/src/components/ui/: alert-dialog.tsx  checkbox.tsx  compact-toggle.tsx  dropdown-menu.tsx  inline-toggle.tsx  loading-button.tsx  loading-switch.tsx  magic-card.tsx  progress.tsx  quick-toggle.tsx  scroll-area.tsx  settings-card.tsx  table.tsx  tabs.tsx  toggle-group.tsx  toggles.ts
frontend/src/components/upload/: FileUpload.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useChatStream.ts  useSettings.ts  useStreaming.ts
frontend/src/lib/: api.ts  env.ts  utils.ts
frontend/src/pages/: ChatStream.tsx  Crawl.tsx  CrawlStream.tsx  Dashboard.tsx  DocumentDetail.tsx  DocumentStream.tsx  Documents.tsx  Landing.tsx  Login.tsx  RealtimeMonitoring.tsx  Search.tsx  Settings.tsx  Upload.tsx  WebCrawler.tsx
frontend/src/types/: index.ts
frontend/v0_scaffold/: package.json
frontend/v0_scaffold/app/: globals.css  layout.tsx  page.tsx
frontend/v0_scaffold/app/analytics/: page.tsx
frontend/v0_scaffold/app/chat/: page.tsx
frontend/v0_scaffold/app/documents/: page.tsx
frontend/v0_scaffold/components/: app-sidebar.tsx  mode-toggle.tsx
logs/: swoop-tui.log.2025-07-09
migrations/: 001_initial_schema.sql  002_settings.sql
prisma/: schema.prisma
scrapers/: Cargo.toml
scrapers/benches/: anti_bot_benchmarks.rs
scrapers/src/: browser.rs  extractors.rs  lib.rs  platforms.rs  rate_limiter.rs  utils.rs
scrapers/src/anti_bot/: behavior_engine.rs  fingerprint_manager.rs  mod.rs  proxy_rotator.rs  session_manager.rs  stealth_browser.rs
scrapers/tests/: mod.rs
scrapers/tests/anti_bot/: fingerprint_tests.rs  mod.rs
scripts/dev/: db-init.sql
src/: api_server.rs  common.rs  config.rs  crawler.rs  document_processor.rs  environment.rs  error.rs  lib.rs  models.rs  monitoring.rs  parser.rs  rate_limiter.rs  server.rs  storage.rs  test_utils.rs  tts.rs  utils.rs
src/ai/: categorization.rs  embeddings.rs  mod.rs  ner.rs  tagging.rs  test_integration.rs
src/chat/: mod.rs  personality_system.rs
src/extractors/: mod.rs
src/intelligence/: mod.rs
src/llm/: analytics.rs  cache.rs  mod.rs  models.rs  routing.rs  streaming.rs
src/loaders/: mod.rs
src/rag/: engine.rs  mod.rs
src/storage/: filesystem.rs  libsql.rs  memory.rs  mod.rs  postgres.rs  sqlite.rs
src/utils/: robots.rs
static/: index.html
storage/: Cargo.toml
storage/src/: config.rs  lib.rs  models.rs  s3_store.rs  scylla_store.rs
test_data/: large.html  medium.html  sample.md  small.html
tests/: db_document.rs  db_postgres.rs  integration_tests.rs  monitoring_tests.rs  production_features_test.rs  storage_factory.rs
tui/: Cargo.toml  Dockerfile
tui/src/: cli.rs  cli_main.rs  dashboard.rs  dashboard_main.rs  main.rs
vercel-edge/: README.md  deploy.sh  env.example  package.json  tsconfig.json  vercel.json
vercel-edge/api/edge/: health.ts
vercel-edge/api/edge/auth/: [...route].ts  verify.ts
vercel-edge/api/edge/documents/: [id].ts
vercel-edge/api/serverless/documents/: upload.ts
vercel-edge/api/serverless/llm/: chat.ts
vercel-edge/lib/: auth.ts  database.ts  prisma.ts
vercel-edge/types/: index.ts
