[package]
name = "swoop_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.5", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2"] }
http-body-util = "0.1"
tl = "0.7.8"
tokio = { version = "1.35", features = ["full"] }
bytes = "1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
governor = "0.6"
failsafe = "1.3"
once_cell = "1.19"
thiserror = "1.0"
