[package]
name = "scrapers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tl = "0.7.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["time"] }
url = "2.0"
rand = "0.8"
regex = "1.0"
swoop_core = { path = "../core" }
ammonia = "4.0"
once_cell = "1.19"
governor = "0.6"
fantoccini = "0.20"
futures = "0.3"
