[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
swoop_core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
csv = "1.3"
serde_json = "1.0"
reqwest = "0.11"
sysinfo = "0.30.13"
clap = "4.4"

[[bin]]
name = "swoop-tui"
path = "src/main.rs"

[[bin]]
name = "swoop-cli"
path = "src/cli_main.rs"
